Migrate to OpenGL 3.2 Core

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,9 @@ add_executable(cosmos ${SOURCES})
 # Enable OpenGL extension prototypes on Linux
 target_compile_definitions(cosmos PRIVATE GL_GLEXT_PROTOTYPES)
 
+# Silence macOS OpenGL deprecation warnings
+target_compile_definitions(cosmos PRIVATE GL_SILENCE_DEPRECATION)
+
 target_include_directories(cosmos PRIVATE
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/lib
