--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,17 @@ jobs:
             ninja-build \
             libsdl2-dev \
             libglu1-mesa-dev \
-            libopenal-dev
+            libopenal-dev \
+            libglm-dev
 
       - name: Configure
         run: cmake -B build -G Ninja -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_FLAGS="-Wall -Wextra"
 
       - name: Build
         run: cmake --build build
+
+      - name: Upload binary
+        uses: actions/upload-artifact@v4
+        with:
+          name: cosmos-linux
+          path: build/cosmos
